tests/ui-msrv/transmute-illegal.stderr
error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui-msrv/transmute-illegal.rs:8:76
  |
8 | const POINTER_VALUE: usize = zerocopy::transmute!(&0usize as *const usize);
  |                                                                            ^ consider adding a `main` function to `$DIR/tests/ui-msrv/transmute-illegal.rs`

error[E0277]: the trait bound `*const usize: AsBytes` is not satisfied
 --> tests/ui-msrv/transmute-illegal.rs:8:30
  |
8 | const POINTER_VALUE: usize = zerocopy::transmute!(&0usize as *const usize);
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `*const usize`
  |
  = help: the following implementations were found:
            <usize as AsBytes>
            <f32 as AsBytes>
            <f64 as AsBytes>
            <i128 as AsBytes>
          and 10 others
note: required by a bound in `POINTER_VALUE::transmute`
 --> tests/ui-msrv/transmute-illegal.rs:8:30
  |
8 | const POINTER_VALUE: usize = zerocopy::transmute!(&0usize as *const usize);
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `POINTER_VALUE::transmute`
  = note: this error originates in the macro `zerocopy::transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
